--- a/src/main/resources/messages_fr.properties
+++ b/src/main/resources/messages_fr.properties
@@ -1,2 +1,2 @@
 multisearch.appName=Multi Search
-multisearch.index.title=Multi Search Toile Application
+multisearch.index.title=Multi Search Web Application ... French
